manifests/infra/git-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: git
  labels:
    app.kubernetes.io/name: git
    app.kubernetes.io/component: git-http-server
