manifests/infra/nebula-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nebula
  labels:
    app.kubernetes.io/name: nebula-graph
