manifests/infra/nebula-operator-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nebula-operator-system
  labels:
    app.kubernetes.io/name: nebula-operator
